# Quart-SocketIo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  README.md  SECURITY.md  changelog.md  contributing.md  coverage.xml  mkdocs.yml  pyproject.toml  roadmap.md  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
.pull-requests/: gh-3_refact.pullrequest.md
docs/: api.md  api.pt-BR.md  api.rst  conf.py  configuration.md  configuration.pt-BR.md  contributing.md  contributing.pt-BR.md  deployment.md  deployment.pt-BR.md  development.md  development.pt-BR.md  events.md  events.pt-BR.md  index.md  index.pt-BR.md  index.rst  installation.md  installation.pt-BR.md  internals.md  internals.pt-BR.md  namespaces-rooms.md  namespaces-rooms.pt-BR.md  quickstart.md  quickstart.pt-BR.md  requirements.txt
pulseio/: _utils.py  _uvicorn.py  config.py  core.py  main.py  middleare.py  namespace.py
pulseio/_types/: __init__.py  _classes.py  _config.py  _main.py  _quart.py
pulseio/common/: exceptions.py
pulseio/typing/: _config.py  _types.py
quart_socketio/: __init__.py  _manager.py  _uvicorn.py  config.py  constant.py  core.py  main.py  middleare.py  middleware.py  namespace.py  utils.py
quart_socketio/_types/: __init__.py  _classes.py  _config.py  _quart.py
quart_socketio/common/: __init__.py  exceptions.py
tests/: __init__.py  test_config.py  test_core.py  test_exceptions.py  test_middleware.py  test_namespace.py  test_socketio.py  test_utils.py  test_uvicorn.py
