[project]
name = "quart_socketio"
version = "0.0.1.post2"
authors = [{ name = "Nicholas Silva", email = "nicholas@robotz.dev" }]
description = "Async Socket.IO integration for Quart applications"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.13"
dependencies = [
    "quart",
    "python-socketio >= 5.12.0",
    "uvicorn>=0.34.3",
    "hypercorn>=0.18.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=0.29.1",
    "pre-commit>=4.6.0",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
]


[project.urls]
Homepage = "https://github.com/Robotz213/Quart-SocketIo"
"Bug Tracker" = "https://github.com/Robotz213/Quart-SocketIo/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"


[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["quart_socketio*"]
exclude = ["docs*", "tests*", "site*"]


[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.ruff]
preview = true
extend-include = ["*.ipynb"]
line-length = 79
indent-width = 4

[tool.ruff.lint.extend-per-file-ignores]
"**/{tests,docs,tools}/*" = ["E402", "S", "D100", "D104", "ANN", "D417", "N818"]
"*" = ["FIX", "PYI021", "D", "SLF001"]

[tool.ruff.lint]
select = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

ignore = ["ANN401", "CPY", "PLC2701", "PLC", "DOC", "D102", "PLR", "ARG", "PD"]


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = 79


[tool.pyright]
typeCheckingMode = "basic"
reportArgumentType = "none"

[tool.pytest.ini_options]
addopts = "--cov=quart_socketio --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
source = ["quart_socketio"]
omit = ["quart_socketio/_types/*"]

[tool.coverage.report]
fail_under = 75
